# cangaroo

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMAKE_MIGRATION.md  CMakeLists.txt  README.md  cangaroo.pro
src/: CMakeLists.txt  app.rc  cangaroo.qrc  main.cpp  mainwindow.cpp  mainwindow.h  src.pro  version.h.in
src/core/: Backend.cpp  CMakeLists.txt  CanMessage.cpp  CanMessage.h  CanMessageOperators.h  CanTrace.cpp  CanTrace.h  LogModel.cpp  Settings.cpp  Settings.h  portable_endian.h
src/driver/: CMakeLists.txt  CanInterface.h  GenericCanSetupPage.cpp
src/driver/AsclCANWinServiceDriver/: AsclCANWinServiceDriver.cpp  AsclCANWinServiceDriver.h  AsclCANWinServiceDriver.pri  AsclCANWinServiceInterface.cpp  AsclCANWinServiceInterface.h  CANServiceDef.h  CMakeLists.txt  SocketWorker.cpp  SocketWorker.h
src/driver/CANBlastDriver/: CANBlasterInterface.h  CMakeLists.txt
src/driver/CandleApiDriver/: CMakeLists.txt  CandleApiDriver.pri
src/driver/SLCANDriver/: CMakeLists.txt  SLCANInterface.cpp
src/driver/SocketCanDriver/: CMakeLists.txt
src/parser/dbc/: CMakeLists.txt  DbcParser.cpp  DbcTokens.cpp  DbcTokens.h
src/window/CanStatusWindow/: CMakeLists.txt
src/window/GraphWindow/: GraphWindow.cpp
src/window/LogWindow/: CMakeLists.txt
src/window/RawTxWindow/: CMakeLists.txt  RawTxWindow.cpp
src/window/SetupDialog/: CMakeLists.txt
src/window/TraceWindow/: AggregatedTraceViewItem.h  AggregatedTraceViewModel.cpp  AggregatedTraceViewModel.h  BaseTraceViewModel.cpp  CMakeLists.txt  TraceWindow.cpp  TraceWindow.h  TraceWindow.ui
